@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<type>database</type>
+		<description>Language labels for extension 'dummyplugin'</description>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="asdf">asdf</label>
+		</languageKey>
+		<languageKey index="fr" type="array">
+			
+		</languageKey>
+	</data>
+	
+</T3locallang>
