@@ -1,0 +1,3 @@
+/* Selectors for the AboutEditor plugin of htmlArea RTE */
+/* TYPO3 SVN ID: $Id $ */
+.htmlarea .toolbar .contagged {background-image:url("images/contagged.gif");}
