@@ -51,6 +51,7 @@
 		This is the template to display a list of terms
 	-->
 	###INDEX###
+	###PAGEBROWSER###
 	###SEARCHBOX###
 	<dl class="tx-contagged-list">
 		<!-- ###LIST###-->
@@ -62,6 +63,7 @@
 		<!-- ###LIST###-->
 	</dl>
 	###INDEX###
+	###PAGEBROWSER###
 	<!-- ###TEMPLATE_LIST### end -->
 
 	<h2>TEMPLATE_SINGLE</h2>
