@@ -16,7 +16,7 @@ plugin.tx_contagged {
 			font-size: 1.2em;
 		}
 		div.tx-contagged-index span {
-			margin: 0 3px;
+			margin: 0;
 		}
 	)
 }
