@@ -201,7 +201,7 @@ $TCA["tx_contagged_terms"] = array (
 			),
 			'imagecaption' => Array (
 				'exclude' => 1,
-				'label' => 'LLL:EXT:contagged/locallang_db.xml:tx_contagged_terms.imagealt',
+				'label' => 'LLL:EXT:contagged/locallang_db.xml:tx_contagged_terms.imagecaption',
 				'l10n_mode' => $l10n_mode,
 				'config' => Array (
 					'type' => 'text',
@@ -238,6 +238,7 @@ $TCA["tx_contagged_terms"] = array (
 					'internal_type' => 'db',
 					'allowed' => '*',
 					'MM' => 'tx_contagged_related_mm',
+					'show_thumbs' => 1,
 					'size' => 3,
 					'autoSizeMax' => 20,
 					'maxitems' => 9999,
@@ -249,7 +250,7 @@ $TCA["tx_contagged_terms"] = array (
 				"label" => "LLL:EXT:contagged/locallang_db.xml:tx_contagged_terms.link",
 				"config" => Array (
 					"type"     => "input",
-					"size"     => "15",
+					"size"     => "28",
 					"max"      => "255",
 					"checkbox" => "",
 					"eval"     => "trim",
